Add Spring benchmark module, README sync, and GitHub workflows
- Add :formatter-benchmark to compare PoS with GJF/Palantir (optional Prettier)
- syncReadmeVersions: regex-rewrite coordinates; runs on assemble locally, skipped in CI unless RUN_README_SYNC
- syncReadmePerfSection: fills README markers from docs/perf-results/spring-framework.md
- refreshSpringBenchmarkReadme aggregates formatter run + both sync tasks
- readme-benchmark.yml: on push to main, clone Spring, run benchmark, commit README + report [skip ci]
- sync-readme-versions.yml: sync coordinates when gradle.properties changes
- Document automation in docs/benchmarks.md